--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CODE CHALLENGE WK-2</title>
+    <title>Flatacuties</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <script src="./script.js" defer ></script>
 </head>
 <body>
-    <h2>Hello World</h2>
+    <div class="LandingPage">
+        <img src="./images/landing.jpg" alt="LandingPage" id="landingImage">
+    </div>
 </body>
 </html>
