--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <div class="LandingPage">
         <img src="./images/landing.jpg" alt="LandingPage" id="landingImage">
+        <h1 id="text-box">FLATACUTIES</h1>
+    </div>
+    <div class="ContentImages">
+        <ul>
+            <li></li>
+        </ul>
     </div>
 </body>
 </html>
