--- a/index.html
+++ b/index.html
@@ -9,14 +9,47 @@
     <script src="./script.js" defer ></script>
 </head>
 <body>
+    <header class="logo-searchbar-login-user">
+        <div class="logo-search">
+        <logo><span> <a href="#">FLATACULTIES</a></span></logo>
+        <input type="search" placeholder="Search for animals" class="search-bar"/>
+    </div>
+        <div class="logins">
+        <div class="sign-up"><a href="#">Sign Up</a></div>
+        <div class="log-in"><a href="#">Log In</a></div>
+    </div>
+    </header>
+    <main>
     <div class="LandingPage">
         <img src="./images/landing.jpg" alt="LandingPage" id="landingImage">
-        <h1 id="text-box">FLATACUTIES</h1>
+        <div class="texts">
+            <h1 id="text-box">FLATACULTIES</h1>
+            <p class="vote-info">You get an opportunity to vote for your favourite virtual pet through our app <br> by just clicking on the specific pet name. This way you get to <br> access the pet's information and cast a vote! <br> Enjoy! </p>
+        </div>
+
+            <div class="pets">
+                <h3>PETS</h3>
+                <ul class="animal-list">
+                <li>lion</li>
+                <li>lion</li>
+                <li>lion</li>
+                <li>lion</li>
+                <li>lion</li>
+            </ul>
+        </div>
+        <div class="animal-details">
+            <img src="https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif" alt="zebra">
+            <div class="name-vote">
+            <p>Ms Zebra</p>
+            <button class="vote"> VOTE :0</button>
+        </div>
+        </div>
+
+            </div>
+            
+           
     </div>
-    <div class="ContentImages">
-        <ul>
-            <li></li>
-        </ul>
-    </div>
+   
+</main>
 </body>
 </html>
