--- a/index.html
+++ b/index.html
@@ -27,26 +27,21 @@
             <p class="vote-info">You get an opportunity to vote for your favourite virtual pet through our app <br> by just clicking on the specific pet name. This way you get to <br> access the pet's information and cast a vote! <br> Enjoy! </p>
         </div>
 
-            <div class="pets">
+            <div class="pets" id="pets">
                 <h3>PETS</h3>
                 <ul class="animal-list">
-                <li>lion</li>
-                <li>lion</li>
-                <li>lion</li>
-                <li>lion</li>
-                <li>lion</li>
             </ul>
         </div>
-        <div class="animal-details">
+        <div class="animal-details" id = "animal-details">
             <img src="https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif" alt="zebra">
             <div class="name-vote">
             <p>Ms Zebra</p>
             <button class="vote"> VOTE :0</button>
+            <!-- <p>VOTES<button class="vote">0</button></p> -->
         </div>
         </div>
 
-            </div>
-            
+            </div> 
            
     </div>
    
