--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flatacuties</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <script src="./script.js" defer ></script>
+    <script src="./script.js" defer></script>
 </head>
+
 <body>
     <header class="logo-searchbar-login-user">
         <div class="logo-search">
-        <logo><span> <a href="#">FLATACULTIES</a></span></logo>
-        <input type="search" placeholder="Search for animals" class="search-bar"/>
-    </div>
+            <logo><span> <a href="#">FLATACULTIES</a></span></logo>
+            <input type="search" placeholder="Search for animals" class="search-bar" />
+        </div>
         <div class="logins">
-        <div class="sign-up"><a href="#">Sign Up</a></div>
-        <div class="log-in"><a href="#">Log In</a></div>
-    </div>
+            <div class="sign-up"><a href="#">Sign Up</a></div>
+            <div class="log-in"><a href="#">Log In</a></div>
+        </div>
     </header>
     <main>
-    <div class="LandingPage">
-        <img src="./images/landing.jpg" alt="LandingPage" id="landingImage">
-        <div class="texts">
-            <h1 id="text-box">FLATACULTIES</h1>
-            <p class="vote-info">You get an opportunity to vote for your favourite virtual pet through our app <br> by just clicking on the specific pet name. This way you get to <br> access the pet's information and cast a vote! <br> Enjoy! </p>
-        </div>
+        <div class="LandingPage">
+            <img src="./images/landing.jpg" alt="LandingPage" id="landingImage">
+            <div class="texts">
+                <h1 id="text-box">FLATACULTIES</h1>
+                <p class="vote-info">You get an opportunity to vote for your favourite virtual pet through our app <br>
+                    by just clicking on the specific pet name. This way you get to <br> access the pet's information and
+                    cast a vote! <br> Enjoy! </p>
+            </div>
 
             <div class="pets" id="pets">
                 <h3>PETS</h3>
                 <ul class="animal-list">
-            </ul>
-        </div>
-        <div class="animal-details" id = "animal-details">
-            <img src="https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif" alt="zebra">
-            <div class="name-vote">
-            <p>Ms Zebra</p>
-            <button class="vote"> VOTE :0</button>
-            <!-- <p>VOTES<button class="vote">0</button></p> -->
-        </div>
-        </div>
-
+                    <li></li>
+                </ul>
             </div>
-            
-           
+            <div class="animal-details" id="animal-details">
+                <img src="https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif" alt="zebra">
+                <div class="name-vote">
+                    <p>Ms Zebra</p>
+                    <button class="vote" id="vote"> VOTE </button>
+                    <button class="vote" id="reset">RESET</button>
+
+                </div>
+            </div>
+        </div>
     </div>
-   
-</main>
+    </main>
 </body>
 </html>
